--- a/datacenter-project/#src/scss/style.scss
+++ b/datacenter-project/#src/scss/style.scss
@@ -33,9 +33,11 @@
 @import "./components/company/about/about-us";
 @import "./components/company/about/about-us_cards";
 @import "./components/company/about/about_datacenter";
+@import "./components/company/map/map";
+
 @import "./components/details";
 @import "./components/contacts";
-@import "./components/map";
+
 @import "./components/advices";
 @import "./components/colo";
 @import "./components/dedic";
