--- a/datacenter-project/#src/scss/base/buttons.scss
+++ b/datacenter-project/#src/scss/base/buttons.scss
@@ -22,11 +22,9 @@
       }
     }
 
-
-
     &:hover {
       @extend %gradient-bg;
-      box-shadow: none;
+      box-shadow: none !important;
     }
 
     @include hover{
@@ -68,6 +66,3 @@
   }
 }
 
-.footer__button{
-  box-shadow: inset 0 0 0 100vw $color-secondary;
-}
