--- a/datacenter-project/#src/scss/layout/footer-mob.scss
+++ b/datacenter-project/#src/scss/layout/footer-mob.scss
@@ -7,12 +7,6 @@
         display: none;
     }
 
-    .footer-mob__content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        row-gap: 5.85rem;
-    }
 
     .footer-mob__title {
         color: $color-light;
@@ -20,87 +14,9 @@
         text-align: center;
     }
 
-    .footer-mob__contact {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .contact__image {
-        width: 168px;
-        height: 168px;
-        border-radius: 50%;
-        background: rgba(62, 119, 187, 0.2);
-        background: linear-gradient(90deg, rgba(31, 120, 224, 0.2) 0%, rgba(0, 194, 255, 0.2) 100%);
-        position: relative;
-    }
-
-    .contact__image-layer {
-        width: 136px;
-        height: 136px;
-        border-radius: 50%;
-        @extend %bg-color-primary;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        img {
-            width: 100%;
-            max-width: 78px;
-            height: auto;
-        }
-    }
-
-    .contact__info {
-        color: $color-light;
-        text-align: center;
-        margin-top: 1.78rem;
-        margin-bottom: 1.92rem;
-        display: flex;
-        flex-direction: column;
-        row-gap: 10px;
-
-        p {
-            margin-top: 0.7rem;
-            span {
-                font-size: 2rem;
-                font-weight: 700;
-            }
-        }
-
-        address {
-
-            @include font-style($size: 2rem);
-            text-align: center;
-            color: $color-light;
-        }
+    .contacts-nav__button{
+        box-shadow: inset 0 0 0 100vw $color-secondary;
     }
 
 }
 
-.footer-mob__navigation {
-    padding-top: 6.93rem;
-
-    .footer-mob-title {
-        margin-bottom: 2.7rem;
-    }
-
-   ul {
-        height: 240px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-
-        li {
-            a {
-                @include font-style($size: 2rem, $weight: 400);
-                color: $color-light;
-            }
-        }
-    }
-}
