refactor: refactor colo page, accordion

--- a/datacenter-project/#src/components/services/colo/tower/_tower-table-service.html
+++ b/datacenter-project/#src/components/services/colo/tower/_tower-table-service.html
@@ -5,20 +5,17 @@
     </div>
     <div class="table__body">
         <div class="table__row">
-            <p>Размещение сервера 1U, с блоком питания до 250 Вт</p>
-            <p  data-name = 'server'>114,00</p>
+            <p>Размещение сервера (в tower исполнении) в шкафу, с блоком питания
+                мощностью до 250 Вт</p>
+            <p data-name="tower">144,00</p>
         </div>
         <div class="table__row">
             <p>Каждые последующие 50 Вт мощности блока питания</p>
-            <p  data-name = 'power'>9,60</p>
-        </div>
-        <div class="table__row">
-            <p>Каждый дополнительный юнит</p>
-            <p data-name = 'unit'>57,00</p>
+            <p data-name="power"> 9,60</p>
         </div>
         <div class="table__row">
             <p>Подключение второго блока питания</p>
-            <p data-name = 'supply'>26,40</p>
+            <p data-name="supply">26,40</p>
         </div>
     </div>
 </div>
