refactor: change media query for accordion, fix fn open accordion

--- a/datacenter-project/#src/components/base/_calculator.html
+++ b/datacenter-project/#src/components/base/_calculator.html
@@ -1,4 +1,4 @@
-<div class="wrapper-calc">
+<div class="calculator__overlay">
     <div class="calc-container">
         <div class="calc-form" id="unit-form">
             <div class="swipe-line" id="calc-swipe-line" data-swipe-threshold="20"
