--- a/datacenter-project/#src/components/services/colo/tower/_tower-wrapper.html
+++ b/datacenter-project/#src/components/services/colo/tower/_tower-wrapper.html
@@ -1,4 +1,6 @@
-<div>
+<div class="services__wrapper">
     @@include('_tower.html')
-    @@include('../_additional-services.html')
+    <div class="services__additional">
+        @@include('../_additional-services.html')
+    </div>
 </div>
