--- a/datacenter-project/#src/components/services/colo/_colo.html
+++ b/datacenter-project/#src/components/services/colo/_colo.html
@@ -47,7 +47,7 @@
                             Наш дата-центр соответствует требованиям, предъявляемым к хостинговым площадкам
                             стандартом PCI DSS 2.0</p>
 
-                        <h4>Параметры телекоммуникационного шкафа:</h4>
+                        <p class="service__text service__text_bold">Параметры телекоммуникационного шкафа:</p>
                         <div class="table">
                             <div class="table__body">
                                 <div class="table__row">
