--- a/datacenter-project/#src/components/services/colo/unit/_unit-wrapper.html
+++ b/datacenter-project/#src/components/services/colo/unit/_unit-wrapper.html
@@ -1,4 +1,7 @@
-<div>
+<div class="services__wrapper">
   @@include('_unit.html')
-  @@include('../_additional-services.html')
+  <div class="services__additional">
+    @@include('../_additional-services.html')
+  </div>
+
 </div>
