--- a/datacenter-project/#src/scss/components/services/colo/colo.scss
+++ b/datacenter-project/#src/scss/components/services/colo/colo.scss
@@ -7,17 +7,32 @@
   margin-bottom: 4rem;
 }
 
-.services__content {
+.services__wrapper{
   @extend %border-shadow;
+}
+
+.services__content {
   padding: 4rem;
 
   @media (max-width: 420px) {
-    padding: 1rem;
+    padding: 1rem 1rem 3rem;
   }
 }
 
-.service__container{
+.service__container, .services__additional{
   padding: 4rem;
+
+  @media (max-width: 1024px) {
+    padding: 2rem;
+  }
+
+  @media (max-width: 768px) {
+    padding: 1rem;
+  }
+
+  @media (max-width: 420px) {
+    padding: 0.7rem;
+  }
 }
 
 .service__text {
@@ -25,15 +40,26 @@
     margin-bottom: 2rem;
   }
 
+  &_bold{
+    font-weight: 700;
+    margin-top: 1rem;
+  }
+
   @include font-style($size: 1.8rem, $height: 160%, $weight: 400);
   text-align: justify;
 
   @media (max-width: 1024px) {
     @include font-style($size: 1.6rem, $height: 160%, $weight: 400);
+    &_bold{
+      font-weight: 700;
+    }
   }
 
   @media (max-width: 768px) {
     @include font-style($size: 1.4rem, $height: 160%, $weight: 400);
+    &_bold{
+      font-weight: 700;
+    }
   }
 
   @media (max-width: 420px) {
@@ -114,83 +140,6 @@
 
 
 
-//TABLE
-
-.table{
-  display: flex;
-  flex-direction: column;
-  margin-top: 2.57rem;
-  margin-bottom: 2.14rem;
-  width: 100%;
-  border: 1px solid $color-light-grey;
-  border-radius: 1.4rem;
-}
-
-.table__head {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  @include font-style($size: 2rem, $weight: 700);
-  border-radius: 1.4rem 1.4rem 0 0;
-  background-color: $color-light-grey;
-  padding: 2rem;
-
-  @media (max-width: 1024px) {
-    @include font-style($size: 1.6rem, $weight: 700);
-  }
-  @media (max-width: 768px) {
-    @include font-style($size: 1.4rem, $weight: 700);
-  }
-
-  @media (max-width: 420px) {
-    padding: 1rem;
-  }
-
-  & > p{
-    flex-basis: 50%;
-    text-align: center;
-  }
-
-
-
-}
-
-.table-body {
-  display: flex;
-  flex-direction: column;
-}
-
-.table__row {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 2rem;
-  @include font-style($size: 1.6rem, $weight: 400);
-
-  @media (max-width: 420px) {
-    padding: 1rem;
-    @include font-style($size: 1.4rem, $weight: 400);
-  }
-
-  & > p{
-    flex-basis: 50%;
-  }
-
-  p:last-child {
-   text-align: center;
-  }
-
-  &:nth-child(2n) {
-    background-color: $color-light-grey;
-  }
-
-  &:last-child {
-    border-radius: 0 0 1.4rem 1.4rem;
-
-  }
-}
-
-
 // ALL SERVICES
 
 .all-services{
@@ -209,6 +158,11 @@
     padding: 0 3.7rem;
     min-height: 60px;
     @extend %border-shadow;
+
+    @media (max-width: 768px) {
+      padding: 0 1rem;
+    }
+
   }
 
   .accordion__header {
@@ -228,11 +182,15 @@
 
     @media (max-width: 1024px) {
       font-size: 2rem;
-      padding: 2.14rem 1.4rem 0;
     }
 
+    @media (max-width: 768px) {
+      font-size: 1.8rem;
+    }
+
+
     @media (max-width: 420px) {
-      padding: 1.4rem;
+      font-size: 1.4rem;
     }
 
     .button__arrow{
@@ -240,6 +198,11 @@
       cursor: pointer;
       &_rotate{
         transform: rotate(-180deg);
+      }
+
+      @media (max-width: 1024px) {
+        width: 20px;
+        height: 20px;
       }
     }
 
@@ -249,7 +212,7 @@
 .accordion__body {
   max-height: 0;
   overflow: hidden;
-  transition: max-height 0.4s linear;
+ @extend %transition;
 
   @media (max-width: 1024px) {
     padding: 0 1.4rem;
@@ -285,10 +248,10 @@
   margin-top: 6rem;
   color: $color-light;
   font-size: 1.8rem;
-  text-align: justify;
 
   @media (max-width: 768px) {
     font-size: 1.4rem;
+    padding: 2rem;
   }
 
   ul {
@@ -303,7 +266,7 @@
 //calc
 
 
-.wrapper-calc {
+.calculator__overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -321,7 +284,7 @@
   }
 }
 
-.wrapper-calc.active {
+.calculator__overlay.active {
   visibility: visible;
   opacity: 1;
 }
