--- a/datacenter-project/#src/scss/style.scss
+++ b/datacenter-project/#src/scss/style.scss
@@ -14,6 +14,7 @@
 @import "./base/accordion";
 @import "./base/navigation";
 @import "./base/contacts_nav";
+@import "./base/table";
 
 //layout
 @import "./layout/container";
