--- a/datacenter-project/#src/components/services/colo/tower/_tower.html
+++ b/datacenter-project/#src/components/services/colo/tower/_tower.html
@@ -18,6 +18,6 @@
                 предоплаченного трафика стоимость следующего входящего 1 Gb составит 0,05
                 рублей, исходящего 1 Gb составит 0,1 рублей. </li>
         </ul>
-        <div>Инструкция <a href="instruction.html">Как разместить сервер</a></div>
+        <div>Инструкция: <a href="instruction.html">Как разместить сервер</a></div>
     </div>
 </div>
