--- a/datacenter-project/#src/components/services/colo/unit/_unit.html
+++ b/datacenter-project/#src/components/services/colo/unit/_unit.html
@@ -20,6 +20,6 @@
                 рублей, исходящего 1 Gb составит 0,1 рублей.
             </li>
         </ul>
-        <div>Инструкция <a href="instruction.html">Как разместить сервер</a></div>
+        <div>Инструкция: <a href="instruction.html">Как разместить сервер</a></div>
     </div>
 </div>
